--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -215,3 +215,50 @@ input::-webkit-inner-spin-button {
   color: #fff;
   padding-right: 10px;
 }
+
+.divider {
+  border: 1px solid #707381;
+  margin: 1rem 0;
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.gridItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.itemImage img {
+  max-width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
+ /* Zoom and rotate planets on hover */
+
+.itemImage img {
+  transition: transform 2s;
+}
+
+.itemImage img:hover {
+  transform: scale(1.3) rotate(360deg);
+}
+
+.itemDetails {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  background: #0000002b;
+  color: #fff;
+  padding: 5px 25px;
+}
+
+.ant-modal-body p.unclaimed-reward-text {
+  color: black !important;
+}
