--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -4,7 +4,6 @@ body {
   background: rgb(24, 19, 46);
   background: radial-gradient(circle, rgba(24, 19, 46, 1) 0%, rgba(42, 50, 91, 1) 35%, rgba(0, 0, 0, 1) 100%);
   background: url('https://opengameart.org/sites/default/files/bg_space_seamless_1.png');
-  padding-top: 2.5rem;
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -261,4 +260,25 @@ input::-webkit-inner-spin-button {
 
 .ant-modal-body p.unclaimed-reward-text {
   color: black !important;
+}
+
+.homePage {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.homePage .buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.homePage .buttons button {
+  width: 10rem;
+  height: 2.5rem;
+}
+
+.homePage .buttons button:last-child {
+  margin-top: 1rem;
 }
