Move client and provider to aptosClient

--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -312,3 +312,12 @@ input::-webkit-inner-spin-button {
 .buy-units-buttons, .black-text {
   color: black !important;
 }
+
+.units-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.units-list .unit-row {
+  margin: 10px;
+}
