--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
   background: rgb(24, 19, 46);
