--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -49,6 +49,7 @@ p {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  margin-bottom: 8px;
 }
 
 .balance-container img {
@@ -196,6 +197,10 @@ p {
   justify-content: center;
 }
 
+.dex .swap-button .swap-button-container {
+  height: 2.5rem;
+}
+
 .swap-calculation-container {
   background-color: #ccc;
   width: 100%;
@@ -239,20 +244,20 @@ input::-webkit-inner-spin-button {
   margin: 1rem 0;
 }
 
-.gridContainer {
+.grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
 }
 
-.gridItem {
+.grid-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.itemImage img {
+.item-image img {
   max-width: 100%;
   height: auto;
   cursor: pointer;
@@ -260,15 +265,15 @@ input::-webkit-inner-spin-button {
 
 /* Zoom and rotate planets on hover */
 
-.itemImage img {
+.item-image img {
   transition: transform 2s;
 }
 
-.itemImage img:hover {
+.item-image img:hover {
   transform: scale(1.3) rotate(360deg);
 }
 
-.itemDetails {
+.item-details {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -277,28 +282,41 @@ input::-webkit-inner-spin-button {
   padding: 5px 25px;
 }
 
+.item-details.contract-price-container {
+  border: 1px solid #ccc;
+  padding-bottom: 8px;
+  border-radius: 16px;
+  margin: 0 16px;
+}
+
 .ant-modal-body p.unclaimed-reward-text {
   color: black !important;
 }
 
-.homePage {
+.ant-modal-body p.unclaimed-reward-text span {
+  color: black;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.home-page {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.homePage .buttons {
+.home-page .buttons {
   display: flex;
   flex-direction: column;
 }
 
-.homePage .buttons button {
+.home-page .buttons button {
   width: 10rem;
   height: 2.5rem;
 }
 
-.homePage .buttons button:last-child {
+.home-page .buttons button:last-child {
   margin-top: 1rem;
 }
 
@@ -312,18 +330,25 @@ input::-webkit-inner-spin-button {
   font-size: 12px;
 }
 
-.enemyItem {
+.enemy-item {
   background: #0000002e;
   padding: 20px;
   border-radius: 15px;
   border: 1px solid #ffffff3d;
 }
 
-.enemyItem:hover {
+.enemy-item .enemy-item-name {
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 4px;
+}
+
+.enemy-item:hover {
   cursor: pointer;
 }
 
-.enemyItem .itemDetails {
+.enemy-item .item-details {
   text-align: center;
 }
 
@@ -339,4 +364,127 @@ input::-webkit-inner-spin-button {
 
 .units-list .unit-row {
   margin: 10px;
+}
+
+.airdrop-resources-button {
+  margin-left: 8px;
+}
+
+.margin-bottom-16 {
+  margin-bottom: 16px;
+}
+
+.margin-bottom-32 {
+  margin-bottom: 32px;
+}
+
+.margin-right-16 {
+  margin-right: 16px !important;
+}
+
+.margin-left-8 {
+  margin-left: 8px !important;
+}
+
+.margin-top-4 {
+  margin-top: 4px !important;
+}
+
+.margin-top-8 {
+  margin-top: 8px !important;
+}
+
+.margin-top-16 {
+  margin-top: 16px !important;
+}
+
+.margin-top-48 {
+  margin-top: 48px !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.enemy-name {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.enemy-image {
+  max-width: 250px;
+}
+
+.item-details-health {
+  margin-top: 4px;
+}
+
+.item-details-reward-container {
+  border: 1px solid #ccc;
+  margin-top: 12px;
+  border-radius: 16px;
+}
+
+.remove-enemy-level {
+  color: black !important;
+  z-index: 999;
+}
+
+.unit-selection-slider {
+  border: 1px solid #ccc;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
+.slider-container {
+  width: 75%;
+  margin-right: 1rem;
+}
+
+.unit-selection-slider span {
+  margin-bottom: 0.25rem;
+}
+
+.contract-item-health {
+  margin-bottom: 8px;
+  text-align: center;
+}
+
+.contract-item-price {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.swap-events-table {
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+}
+
+.create-trading-pair-button {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.create-unit-buttons-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.init-unit-button {
+  display: flex;
+  flex-direction: column;
+}
+
+.create-contract-button {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
 }
